# musepicker

./: .gitignore  README.md  SECURITY_INCIDENT_RESPONSE.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-api.yml
apps/api/: Dockerfile  README.md  build.gradle  settings.gradle
apps/ingest/: Dockerfile  README.md  pyproject.toml
apps/ingest/musepicker_ingest/: __init__.py  config.py  models.py
apps/ingest/musepicker_ingest/adapters/: __init__.py  base.py  common.py  klook.py  registry.py  scraper_fallback.py  ticketstodo.py  tripcom.py  viator.py
apps/ingest/musepicker_ingest/pipeline/: __init__.py  canonicalization.py  dead_letter.py  health_metrics.py  idempotency.py  run_ingest.py  runner.py  storage.py
apps/ingest/musepicker_ingest/quality/: __init__.py  checks.py
apps/ingest/tests/: test_adapter_contract.py  test_canonicalization.py  test_dead_letter_replay.py  test_idempotency.py  test_quality_checks.py
apps/ingest/tests/fixtures/: fallback_offers.sample.json  klook_museum_list.sample.json  ticketstodo_museum_details.sample.json  tripcom_offers.sample.json  viator_offers.sample.json
apps/web/: README.md  package.json
docs/: PROJECT_CONTEXT.md  architecture.md
docs/governance/: README.md  api-versioning-policy.md  coding-standards.md  migration-policy.md  quality-gates.md
docs/operations/: SHIMYUNBO_FIRST_LAUNCH.md  launch-gates.md  monitoring-and-runbooks.md  post-launch-loop.md
infra/: Caddyfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
infra/env/: README.md  (+4 more)
scripts/: check_workflow_policy.sh
(+92 files in other folders)
